# mp2-clinical-injection

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  pyproject.toml
docs/: ANNOTATION_RUBRIC.md  DEVIATIONS.md  FUTURE_WORK.md  METHODOLOGY.md  PIPELINE_CONTRACT.md  PRE-REGISTRATION.md  SCOPE.md  WRITEUP.md
results/run_2026-04-20_034721/: .sweep_manifest.json  VALIDATION_REPORT.md  annotation_forms.html  annotation_input.csv  annotation_rerate_input.csv  claude_crossrating_input.csv  config_gemma2_9b_scenario_01_triage.json  config_gemma2_9b_scenario_02_summarization.json  config_llama3.1_8b_scenario_01_triage.json  config_llama3.1_8b_scenario_02_summarization.json  config_mistral_7b_scenario_01_triage.json  config_mistral_7b_scenario_02_summarization.json  config_qwen3_8b_scenario_01_triage.json  config_qwen3_8b_scenario_02_summarization.json  fisher_exact_table.csv  proportions_table.csv  scenario_01_triage_gemma2_9b_attack_v1.jsonl  scenario_01_triage_gemma2_9b_attack_v2.jsonl  scenario_01_triage_gemma2_9b_baseline.jsonl  scenario_01_triage_gemma2_9b_control_v1.jsonl  scenario_01_triage_gemma2_9b_control_v2.jsonl  scenario_01_triage_gemma2_9b_mitigation.jsonl  scenario_01_triage_gemma2_9b_non_clinical_baseline.jsonl  scenario_01_triage_llama3.1_8b_attack_v1.jsonl  (+50 more)
scenarios/: scenario_01_triage.yaml  scenario_02_summarization.yaml
src/: analyze.py  build_annotation.py  harness.py  scorer.py  validate_annotation.py  validate_run.py
tests/: test_analysis.py  test_harness.py  test_scenarios.py  test_scoring.py
